--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main class="container">
         <section class="question-container">
             <div class="question">
-                <div id="answer-buttons" class="btn-grid">
+                <div id="answer-buttons" class="btn-grid hide">
                     <button class="btn">Answer 1</button>
                     <button class="btn">Answer 2</button>
                     <button class="btn">Answer 3</button>
