Main JS Functionality Added

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
 <body>
     <main class="container">
-        <section class="question-container">
-            <div class="question">
-                <div id="answer-buttons" class="btn-grid hide">
-                    <button class="btn">Answer 1</button>
-                    <button class="btn">Answer 2</button>
-                    <button class="btn">Answer 3</button>
-                    <button class="btn">Answer 4</button>
-                </div>
+        <section id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
             </div>
         </section>
         <div class="controls">
