Used Fisher-Yates shuffle algo, added scoreboard & refined CSS + JS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
 
-        <div class="score">
+        <div class="score hide">
             <span id="right-answers"></span>
         </div>
     </main>
